--- a/openwrt/G-DOCK/.config
+++ b/openwrt/G-DOCK/.config
@@ -3871,7 +3871,7 @@ CONFIG_PACKAGE_luci-app-baidupcs-web=y
 # CONFIG_PACKAGE_luci-app-cjdns is not set
 # CONFIG_PACKAGE_luci-app-clamav is not set
 # CONFIG_PACKAGE_luci-app-commands is not set
-# CONFIG_PACKAGE_luci-app-cpufreq is not set
+CONFIG_PACKAGE_luci-app-cpufreq=y
 # CONFIG_PACKAGE_luci-app-cshark is not set
 CONFIG_PACKAGE_luci-app-ddns=y
 # CONFIG_PACKAGE_luci-app-diag-core is not set
@@ -3908,7 +3908,7 @@ CONFIG_PACKAGE_luci-app-mwan3helper=y
 # CONFIG_PACKAGE_luci-app-netdata is not set
 # CONFIG_PACKAGE_luci-app-nft-qos is not set
 CONFIG_PACKAGE_luci-app-nlbwmon=y
-# CONFIG_PACKAGE_luci-app-noddos is not set
+CONFIG_PACKAGE_luci-app-noddos=y
 # CONFIG_PACKAGE_luci-app-nps is not set
 # CONFIG_PACKAGE_luci-app-ntpc is not set
 # CONFIG_PACKAGE_luci-app-ocserv is not set
@@ -3958,7 +3958,7 @@ CONFIG_UnblockNeteaseMusic_Go=y
 CONFIG_UnblockNeteaseMusic_NodeJS=y
 # CONFIG_PACKAGE_luci-app-unbound is not set
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
+# CONFIG_PACKAGE_luci-app-usb-printer is not set
 # CONFIG_PACKAGE_luci-app-v2ray-server is not set
 # CONFIG_PACKAGE_luci-app-verysync is not set
 CONFIG_PACKAGE_luci-app-vlmcsd=y
@@ -4302,7 +4302,7 @@ CONFIG_PACKAGE_luci-i18n-unblockmusic-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-vi is not set
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-zh-tw is not set
-CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
@@ -4430,13 +4430,12 @@ CONFIG_PACKAGE_transmission-web-control=y
 #
 # CONFIG_PACKAGE_coova-chilli is not set
 # CONFIG_PACKAGE_nodogsplash is not set
-CONFIG_PACKAGE_wifidog=y
-CONFIG_PACKAGE_wifidog-ng-mbedtls=m
-CONFIG_PACKAGE_wifidog-ng-nossl=m
-CONFIG_PACKAGE_wifidog-ng-openssl=m
-CONFIG_PACKAGE_wifidog-ng-wolfssl=m
-CONFIG_PACKAGE_wifidog-tls=m
-
+# CONFIG_PACKAGE_wifidog is not set
+# CONFIG_PACKAGE_wifidog-ng-mbedtls is not set
+# CONFIG_PACKAGE_wifidog-ng-nossl is not set
+# CONFIG_PACKAGE_wifidog-ng-openssl is not set
+# CONFIG_PACKAGE_wifidog-ng-wolfssl is not set
+# CONFIG_PACKAGE_wifidog-tls is not set
 #
 # Download Manager
 #
@@ -5276,8 +5275,8 @@ CONFIG_PACKAGE_microsocks=y
 # CONFIG_PACKAGE_netperf is not set
 # CONFIG_PACKAGE_nextdns is not set
 CONFIG_PACKAGE_nlbwmon=y
-# CONFIG_PACKAGE_noddos is not set
-# CONFIG_PACKAGE_noping is not set
+CONFIG_PACKAGE_noddos=y
+CONFIG_PACKAGE_noping=y
 # CONFIG_PACKAGE_npc is not set
 # CONFIG_PACKAGE_nut is not set
 # CONFIG_PACKAGE_obfsproxy is not set
