--- a/padavan/backups/padavan.yml
+++ b/padavan/backups/padavan.yml
@@ -5,7 +5,12 @@
 name: Padavan CI Template
 on:
   # schedule:
-  #   - cron: '0 17 * * *'             # 每天国际时间17点，北京时间1点执行(北京+8)
+  #   - cron: '0 19 * * *'             # 每天国际时间19点，北京时间3点执行(北京+8)
+  # push:
+  #   branches:
+  #     - master
+  #     path:
+  #       - padavan/*                 # 监听padavan目录的push操作
   watch:
     types: [started]
 env:
