--- a/.github/workflows/padavan-PSG1218.yml
+++ b/.github/workflows/padavan-PSG1218.yml
@@ -6,11 +6,11 @@ name: Padavan CI PSG1218
 on:
   # schedule:                         # 时间表
   #   - cron: '0 19 * * *'            # 每天国际时间19点，北京时间凌晨3点执行(北京+8)
-  push:                               # push 操作
-    branches:                         # 分支
-      - master                        # 主分支
-    path:                             # 路径
-      - padavan/*                     # 监听padavan目录下所有文件的push操作
+  # push:                               # push 操作
+  #   branches:                         # 分支
+  #     - master                        # 主分支
+  #   paths:                            # 路径
+  #     - padavan/*                     # 监听padavan目录下所有文件的push操作
   watch:                                # 监视操作
     types: [started]                    # 点击 star 之后
 env:
