--- a/.github/workflows/openwrt-G-DOCK.yml
+++ b/.github/workflows/openwrt-G-DOCK.yml
@@ -1,20 +1,22 @@
 # # # # # # # # # # #
 # 自动构建 openWrt G-DOCK
-#     花妆男 
+#     花妆男
 # # # # # # # # # # #
 name: OpenWrt CI G-DOCK
 on:
-  schedule:                             # 时间表
-     - cron: '0 19 * * *'               # 每天国际时间19点，北京时间凌晨3点执行(北京+8)
-  # push:                               # push 操作
-  #   branches:                         # 分支
-  #     - master                        # 主分支
-  #   paths:                             # 路径
+  schedule:                           # 时间表
+    - cron: '0 19 * * *'              # 每天国际时间19点，北京时间凌晨3点执行(北京+8)
+  push:                               # push 操作
+    branches:                         # 分支
+      - master                        # 主分支
+  #   paths:                            # 路径
   #     - openwrt/*                     # 监听openwrt目录下所有文件的push操作
-  watch:                                # 监视操作
-    types: [started]                    # 点击 star 之后
+    paths:                            # 路径
+      - logs/g-dock.md                    # 监听logs目录下 k2.md 的push操作
+  # watch:                              # 监视操作
+  #   types: [started]                  # 点击 star 之后
 env:
-  T_NAME: "G-DOCK"                     # 设备名字 (op编译慢所以直接单个的编译) 
+  T_NAME: "G-DOCK"                     # 设备名字 (op编译慢所以直接单个的编译)
   BASE_PATH: openwrt                   # 基础目录
   PUBLIC_PATH: public                  # 公共目录
   PUBLIC_SH: public.sh                 # 公共执行文件
@@ -34,7 +36,7 @@ jobs:
 
     - name: Initialization Environment    # 2.初始化环境
       env:
-        DEBIAN_FRONTEND: noninteractive  
+        DEBIAN_FRONTEND: noninteractive
       run: |
         docker rmi `docker images -q`
         sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
@@ -44,16 +46,16 @@ jobs:
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
         sudo timedatectl set-timezone 'Asia/Shanghai'  # 设置时区
-    - name: Clone Code                     # 3.拷贝代码
+    - name: Clone Code                      # 3.拷贝代码
       run: |
         git clone --depth=1 $CLONE_URL -b $CLONE_BRANCH $WORK_PATH
 
     - name: Update Feeds                    # 4.下载Feeds
       run: |
-        cd $WORK_PATH 
+        cd $WORK_PATH
         ./scripts/feeds update -a
 
-    - name: Load Config  And Install Feeds    # 5. 加载配置文件 并且安装 Feeds  
+    - name: Load Config  And Install Feeds  # 5. 加载配置文件 并且安装 Feeds
       run: |
         [ -f $BASE_PATH/$T_NAME/banner ] && cp -f $BASE_PATH/$T_NAME/banner $WORK_PATH/package/base-files/files/etc/banner
         [ -f $BASE_PATH/$T_NAME/.config ] && cp -f $BASE_PATH/$T_NAME/.config $WORK_PATH/.config
