--- a/openwrt/backups/openwrt.yml
+++ b/openwrt/backups/openwrt.yml
@@ -20,7 +20,7 @@ env:
   BASE_PATH: openwrt                   # 基础目录
   PUBLIC_PATH: public                  # 公共目录
   PUBLIC_SH: public.sh                 # 公共执行文件
-  UPLOAD_BIN_DIR: true                 # 是否导出bin文件
+  UPLOAD_PACKAGES_DIR: true                 # 是否导出bin文件
   UPLOAD_FIRMWARE: true                # 是否导出固件
   CLONE_URL: https://github.com/coolsnowwolf/lede  # 地址
   CLONE_BRANCH: master                 # 分支
@@ -87,23 +87,25 @@ jobs:
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 V=s
 
-    - name: Organize Files                   # 8. 整理编译结果
+    - name: Organize Firmware                  # 8. 整理固件包
       if: success()
       run: |
         cd $WORK_PATH/bin/targets/*/*
         rm -rf packages
-        echo "::set-env name=FILE_NAME::$T_NAME-$(date "+%Y%m%d")"  # 文件名
-        echo "::set-env name=FIRMWARE::$PWD"                        # Firmware 路径
-        echo "::set-env name=BIN_PATH::$WORK_PATH/bin"              # BIN 文件路径
+        echo "::set-env name=FILE_NAME::$T_NAME-$(date "+%Y%m%d")"   # 文件名
+        echo "::set-env name=FIRMWARE::$PWD"                         # Firmware 路径
+    - name: Organize Packages                 # 9. 整理插件包
+        cd $WORK_PATH/bin/packages
+        echo "::set-env name=PACKAGES_PATH::$PWD"                    # 插件包目录文件路径
 
-    - name: Upload Bin Directory             # 9. 导出Bin目录
+    - name: Upload Packages Directory              # 10. 导出插件包目录
       uses: actions/upload-artifact@master
-      if: env.UPLOAD_BIN_DIR == 'true' && success()
+      if: env.UPLOAD_PACKAGES_DIR == 'true' && success()
       with:
-        name: OpenWrt-${{env.FILE_NAME}}-Bin
-        path: ${{ env.BIN_PATH }}
+        name: OpenWrt-${{env.FILE_NAME}}-Packages
+        path: ${{ env.PACKAGES_PATH }}
 
-    - name: Upload Firmware Directory        # 10. 导出固件目录
+    - name: Upload Firmware Directory         # 11. 导出固件目录
       uses: actions/upload-artifact@master
       if: success()
       with:
