--- a/.github/workflows/openwrt-G-DOCK.yml
+++ b/.github/workflows/openwrt-G-DOCK.yml
@@ -95,6 +95,8 @@ jobs:
         echo "::set-env name=FILE_NAME::$T_NAME-$(date "+%Y%m%d")"   # 文件名
         echo "::set-env name=FIRMWARE::$PWD"                         # Firmware 路径
     - name: Organize Packages                 # 9. 整理插件包
+      if: success()
+      run: |
         cd $WORK_PATH/bin/packages
         echo "::set-env name=PACKAGES_PATH::$PWD"                    # 插件包目录文件路径
 
