--- a/.github/workflows/openwrt-G-DOCK.yml
+++ b/.github/workflows/openwrt-G-DOCK.yml
@@ -13,8 +13,8 @@ on:
   #     - openwrt/*                     # 监听openwrt目录下所有文件的push操作
     paths:                            # 路径
       - logs/g-dock.md                    # 监听logs目录下 k2.md 的push操作
-  # watch:                              # 监视操作
-  #   types: [started]                  # 点击 star 之后
+   watch:                              # 监视操作
+     types: [started]                  # 点击 star 之后
 env:
   T_NAME: "G-DOCK"                     # 设备名字 (op编译慢所以直接单个的编译)
   BASE_PATH: openwrt                   # 基础目录
