--- a/.github/workflows/padavan-PSG1218.yml
+++ b/.github/workflows/padavan-PSG1218.yml
@@ -52,9 +52,11 @@ jobs:
     - name: Build Tool Chain           # 4.构建工具链
       run: |
         cd $WORK_PATH/toolchain-mipsel
-        mkdir -p toolchain-3.4.x
-        wget https://github.com/hanwckf/padavan-toolchain/releases/download/v1.1/mipsel-linux-uclibc.tar.xz
-        tar -xvf mipsel-linux-uclibc.tar.xz -C toolchain-3.4.x
+        # mkdir -p toolchain-3.4.x
+        # wget https://github.com/hanwckf/padavan-toolchain/releases/download/v1.1/mipsel-linux-uclibc.tar.xz
+        # tar -xvf mipsel-linux-uclibc.tar.xz -C toolchain-3.4.x
+        cd /opt/rt-n56u/toolchain-mipsel
+        sh dl_toolchain.sh
         mkdir ${WORK_PATH}/images/
     - name: Clear And Build            # 5.清理构建树并开始构建
       run: |
@@ -93,6 +95,7 @@ jobs:
         sudo ./clear_tree
         sudo ./build_firmware_modify $t_item          # $t_item  是循环的子对象
         sudo mv -f images/*.trx ${WORK_PATH}/images/
+        sudo mv -f images/*.sh ${WORK_PATH}/images/
         done
         echo "::set-env name=FILE_NAME::$T_NAMES-$(date "+%Y%m%d")"  # 包名
         echo "::set-env name=IMAGES_PATH::${WORK_PATH}/images/"      # 打包目录
