--- a/.github/workflows/padavan-PSG1218.yml
+++ b/.github/workflows/padavan-PSG1218.yml
@@ -55,11 +55,12 @@ jobs:
         # mkdir -p toolchain-3.4.x
         # wget https://github.com/hanwckf/padavan-toolchain/releases/download/v1.1/mipsel-linux-uclibc.tar.xz
         # tar -xvf mipsel-linux-uclibc.tar.xz -C toolchain-3.4.x
-        cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
-        mkdir ${WORK_PATH}/images/
+        mkdir -p ${WORK_PATH}/images/
     - name: Clear And Build            # 5.清理构建树并开始构建
       run: |
+        cwd=`pwd`
+        CONFIG_TOOLCHAIN_DIR=${cwd//\//\\\/}\\/toolchain-mipsel
         # 1.拷贝公共文件
         cp -f $BASE_PATH/$PUBLIC_PATH/$PUBLIC_SH  $WORK_PATH/
         sudo chmod +x $WORK_PATH/$PUBLIC_SH
@@ -88,7 +89,7 @@ jobs:
         cd $WORK_PATH/trunk
         for t_item in $T_NAMES;
         do
-        cp -f $WORK_PATH/trunk/configs/templates/$t_item.config .config  # 拷贝模板到 .config
+        cp -f configs/templates/$t_item.config .config  # 拷贝模板到 .config
         echo "执行 ${PUBLIC_SH} sh"
         sudo $WORK_PATH/$PUBLIC_SH
         if [ -e $WORK_PATH/$t_item.sh ] ; then
@@ -96,10 +97,11 @@ jobs:
           sudo $WORK_PATH/$t_item.sh
         fi
         # 4. 清理构建
-        sudo ./clear_tree
-        sudo ./build_firmware_modify $t_item          # $t_item  是循环的子对象
+        sed -i "s/^CONFIG_TOOLCHAIN_DIR=.*$/CONFIG_TOOLCHAIN_DIR=${CONFIG_TOOLCHAIN_DIR}/g" .config
+        sudo ./clear_tree_simple
+        sudo ./build_firmware_modify $t_item 0        # $t_item  是循环的子对象
         sudo mv -f images/*.trx ${WORK_PATH}/images/
-        sudo mv -f ${WORK_PATH}/user/shadowsocks/scripts/shadowsocks.sh/*.sh ${WORK_PATH}/images/
+        sudo mv -f ${WORK_PATH}/trunk/user/shadowsocks/scripts/shadowsocks.sh/*.sh ${WORK_PATH}/images/
         done
         echo "::set-env name=FILE_NAME::$T_NAMES-$(date "+%Y%m%d")"  # 包名
         echo "::set-env name=IMAGES_PATH::${WORK_PATH}/images/"      # 打包目录
