--- a/.github/workflows/padavan-PSG1218.yml
+++ b/.github/workflows/padavan-PSG1218.yml
@@ -98,8 +98,9 @@ jobs:
         fi
         # 4. 清理构建
         sed -i "s/^CONFIG_TOOLCHAIN_DIR=.*$/CONFIG_TOOLCHAIN_DIR=${CONFIG_TOOLCHAIN_DIR}/g" .config
+        sudo cp -f .config ${WORK_PATH}/images/
         sudo ./clear_tree_simple
-        sudo ./build_firmware_modify $t_item 0        # $t_item  是循环的子对象
+        sudo fakeroot ./build_firmware_modify $t_item 0        # $t_item  是循环的子对象
         sudo mv -f images/*.trx ${WORK_PATH}/images/
         sudo mv -f ${WORK_PATH}/trunk/user/shadowsocks/scripts/shadowsocks.sh/*.sh ${WORK_PATH}/images/
         done
