--- a/.github/workflows/padavan-PSG1218.yml
+++ b/.github/workflows/padavan-PSG1218.yml
@@ -52,10 +52,10 @@ jobs:
     - name: Build Tool Chain           # 4.构建工具链
       run: |
         cd $WORK_PATH/toolchain-mipsel
-        # mkdir -p toolchain-3.4.x
-        # wget https://github.com/hanwckf/padavan-toolchain/releases/download/v1.1/mipsel-linux-uclibc.tar.xz
-        # tar -xvf mipsel-linux-uclibc.tar.xz -C toolchain-3.4.x
-        sh dl_toolchain.sh
+        mkdir -p toolchain-3.4.x
+        wget https://github.com/hanwckf/padavan-toolchain/releases/download/v1.1/mipsel-linux-uclibc.tar.xz
+        tar -xvf mipsel-linux-uclibc.tar.xz -C toolchain-3.4.x
+        #sh dl_toolchain.sh
         mkdir -p ${WORK_PATH}/images/
     - name: Clear And Build            # 5.清理构建树并开始构建
       run: |
