--- a/.github/workflows/padavan-PSG1218.yml
+++ b/.github/workflows/padavan-PSG1218.yml
@@ -52,10 +52,7 @@ jobs:
     - name: Build Tool Chain           # 4.构建工具链
       run: |
         cd $WORK_PATH/toolchain-mipsel
-        mkdir -p toolchain-3.4.x
-        wget https://github.com/hanwckf/padavan-toolchain/releases/download/v1.1/mipsel-linux-uclibc.tar.xz
-        tar -xvf mipsel-linux-uclibc.tar.xz -C toolchain-3.4.x
-        #sh dl_toolchain.sh
+        sh dl_toolchain.sh
         mkdir -p ${WORK_PATH}/images/
     - name: Clear And Build            # 5.清理构建树并开始构建
       run: |
@@ -100,7 +97,7 @@ jobs:
         sed -i "s/^CONFIG_TOOLCHAIN_DIR=.*$/CONFIG_TOOLCHAIN_DIR=${CONFIG_TOOLCHAIN_DIR}/g" .config
         sudo cp -f .config ${WORK_PATH}/images/
         sudo ./clear_tree_simple
-        sudo fakeroot ./build_firmware_modify $t_item 0        # $t_item  是循环的子对象
+        sudo fakeroot ./build_firmware_modify $t_item         # $t_item  是循环的子对象
         sudo mv -f images/*.trx ${WORK_PATH}/images/
         sudo mv -f ${WORK_PATH}/trunk/user/shadowsocks/scripts/shadowsocks.sh/*.sh ${WORK_PATH}/images/
         done
