--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,6 @@ root = true
   indent_style = space
   insert_final_newline = true
   trim_trailing_whitespace = true
+[*.md]
+  trim_trailing_whitespace = false
+
