🔨  设置 GitHub Active 环境变量

--- a/.github/workflows/openwrt-G-DOCK.yml
+++ b/.github/workflows/openwrt-G-DOCK.yml
@@ -30,6 +30,8 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     if: github.event.repository.owner.id == github.event.sender.id
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
     steps:
       - name: Checkout Master # 1.导入主分支
         uses: actions/checkout@master
