--- a/.github/workflows/openwrt-G-DOCK.yml
+++ b/.github/workflows/openwrt-G-DOCK.yml
@@ -59,6 +59,8 @@ jobs:
       - name: Update Feeds # 4.下载Feeds
         run: |
           cd $WORK_PATH
+          sed -i '$a src-git kenzo https://github.com/kenzok8/openwrt-packages' feeds.conf.default
+          sed -i '$a src-git small https://github.com/kenzok8/small' feeds.conf.default
           ./scripts/feeds update -a
 
       - name: Load Config  And Install Feeds # 5. 加载配置文件 并且安装 Feeds
